# ali

./: .gitignore  README.md  init.sh  meson.build  meson.options  meson_commands.md  notes.md  process.md
archiso/: mkiso.sh
archiso/default/: packages.x86_64  profiledef.sh
archiso/default/airootfs/etc/: locale.gen  vconsole.conf
archiso/default/airootfs/root/: .xinitrc  ali
archiso/default/airootfs/root/.config/openbox/: autostart.sh  environment  menu.xml  rc.xml
archiso/default/airootfs/root/.local/.bin/: setbg
include/ali/: commands.hpp  common.hpp  console.hpp  disk_utils.hpp  install.hpp  locale_utils.hpp  packages.hpp  profiles.hpp  util.hpp
include/ali/widgets/: accounts_widget.hpp  content_widget.hpp  install_widget.hpp  network_widget.hpp  packages_widget.hpp  partitions_widget.hpp  profile_widget.hpp  start_widget.hpp  swap_widget.hpp  video_widget.hpp  welcome_widget.hpp  widgets.hpp
package/: PKGBUILD
package/scripts/: do_install.sh  install.sh
profiles/: greeters.json  greeters.jsonc
profiles/desktop/: cinnamon.jsonc  hyprland.json  hyprland.jsonc
profiles/desktop/Cinnamon/: packages  system_commands  user_commands
profiles/desktop/Hyprland/: commands  info  packages  system_commands  user_commands
profiles/tty/: minimal.json
profiles/tty/Minimal/: info
src/: ali.cpp  ali2.cpp  commands.cpp  console.cpp  disk_utils.cpp  install.cpp  locale_utils.cpp  packages.cpp  profiles.cpp  test.cpp  ui.cpp  utils.cpp
src/widgets/: accounts_widget.cpp  install_widget.cpp  packages_widget.cpp  partitions_widget.cpp  profile_widget.cpp  start_widget.cpp  video_widget.cpp  widgets.cpp
